see source code and the LICENSE file

2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

09-Jul-2013 Jean-Marie Simonet
 $ Updating installation lang files: eo-XX

08-Jul-2013 Jean-Marie Simonet
 $ Updating installation lang files: et-EE, fa-IR, nl-NL, vi-VN
 ^ [#31219] Update to PHPMailer 5.2.6. Thanks Michael Babker.
 # [#31044] media manager overlay preview broken 2. Thanks Landor LeBaron
 # [#30790] Typo in header makes header useless. Thanks Tino Brackebusch

07-Jul-2013 Michael Babker
 # [#31371] Commit for issue 31351 causes PHP notice in Banner Tracks

07-Jul-2013 Jean-Marie Simonet
 # [#31270] Fix help screens links in sample testing data. Thanks George Wilson
 ^ [#31351] Convert JToolbar to render toolbar items with JLayout. Thanks Michael Babker
 $ Updating installation lang files: nb-NO, ta-IN

06-Jul-2013 Elin Waring
 ^ [#31275] Change use of self:: to static:: in JHtml helpers.  Thanks Michael Babker
 # [#30870] Fix some mistakes. Thanks Rasmus Lerdorf

06-Jul-2013 Michael Babker
 # [#31296] Edit profile button comes before page-header instead of after.  Thanks Rob de Cleen
 ^ [#31355] *Multilanguage: Adding bootstrap tooltips to the associations button.  Thanks Jean-Marie Simonet
 # [#31363] Commit for issue 30966 garbles HTML for URL's in forms.  Thanks Mark Dexter
 # [#31361] SQL Error in Banner Manager: Clients.  Thanks Mark Dexter
 + [#31289] Add JResponseJson as a CMS library class.  Thanks Patrick Alt
 ^ [#30607] Removing the array part in field_mappings.  Thanks Thomas Hunziker

06-Jul-2013 Jean-Marie Simonet
 ^$ [#31190] *Multilanguage improvement: edit associated items in the Association Tab. Thanks Dennis Hermatski.