@@ -20,9 +20,11 @@ JHtml::_('behavior.keepalive');
 		<label id="mod-login-password-lbl" for="mod-login-password"><?php echo JText::_('JGLOBAL_PASSWORD'); ?></label>
 		<input name="passwd" id="mod-login-password" type="password" class="inputbox" size="15" />
 
-		<label id="mod-login-language-lbl" for="lang"><?php echo JText::_('MOD_LOGIN_LANGUAGE'); ?></label>
-		<?php echo $langs; ?>
-
+		<?php if (!empty ($langs)) : ?>
+			<label id="mod-login-language-lbl" for="lang"><?php echo JText::_('MOD_LOGIN_LANGUAGE'); ?></label>
+			<?php echo $langs; ?>
+		<?php endif; ?>
+		
 		<div class="clr"></div>
 
 		<div class="button-holder">
