@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+10-Jul-2013 Jean-Marie Simonet
+ ^ [#31388] Admin login shows language option. Thanks Brian Teeman
+
 09-Jul-2013 Jean-Marie Simonet
  $ Updating installation lang files: eo-XX
 
